# Multi-agent

./: .env.example  .gitignore  ARCHITECTURE_FLOW.md  DEPLOYMENT_STEPS.md  README.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  composer.py  executor.py  planner.py  prompts.py  researcher.py  reviewer.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: __init__.py  schemas.py
backend/app/orchestrator/: graph.py
backend/app/services/: llm.py
backend/app/storage/: history.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: agent-card.tsx  intermediate-panels.tsx  output-panel.tsx  prompt-input.tsx  run-history.tsx  workflow-graph.tsx
frontend/lib/: api.ts  types.ts  utils.ts
